--- a/main.tex
+++ b/main.tex
@@ -311,7 +311,7 @@ proving that $s'$ is as least as good a solution as $s$.
 
 We can use this theorem for glyphs of any kind, in particular for the glyphs we discussed before, so long as the utility function can be modelled as described in the theorem.\\
 
-With this, all we need to do is to define reasonable utility functions for our different glyphs and evaluate them locally with reasonable runtime.
+With this, all we need to do is to define meaningful utility functions for our different glyphs and evaluate them locally with feasible runtime.
 
 \subsection{Centered nested disks}
 For centered nested disks we can easily define local utility measures. Every glyph $G$ corresponds to $k$ nested circles therefore we could just calculate the visible perimeter for the $k$ circles and then just combine them by choosing the minimum of the $k$ circles or the sum of the visible perimeter of the $k$ circles. For some set $S$ of objects above $G_i$ we then get formally:
