clarification in greedy optimality proof

--- a/main.tex
+++ b/main.tex
@@ -294,7 +294,7 @@ where the inequality comes from the second argument on the left-hand side being 
 &=\Gamma(s^*(i),\{s^*(l),\ l>i\})\geq\Gamma(s(i),\{s(l),\ l>i\})
 \end{split}
 \end{equation*}
-Here, the first equality is simply substituting $k'=i$. The second one comes from $s'$ and $s*$ agreeing for $l\leq i$ and the inequality holds because $s^*(i)$ is the choice of the algorithm and thus maximizes precisely this term, so $k=i=k'$ does the job.
+Here, the first equality is simply substituting $k'=i$. The second one comes from $s'$ and $s^*$ agreeing for $l\leq i$ and the inequality holds because $s^*(i)$ is the choice of the algorithm and thus maximizes precisely this term, so $k=i=k'$ does the job.
 
 In total 
 \begin{equation*}
